--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="hero" id="top">
         <div class="container hero__content">
             <div>
-                <p class="hero__eyebrow">Full-Stack Developer & IOSH-Certified HSE personel</p>
+                <p class="hero__eyebrow">Full-Stack Developer & IOSH-Certified HSE Personnel</p>
                 <h1>Elius Niwamanya</h1>
                 <p class="hero__summary">
                     Full-stack engineer uniting Python, Django, and modern JavaScript frameworks with IOSH-informed HSE leadership.
@@ -22,14 +22,54 @@
                 <div class="hero__cta">
                     <a class="button" href="mailto:niwamanyaelius95@gmail.com">Contact Me</a>
                     <a class="button button--ghost" href="#projects">View Projects</a>
+                    <button id="theme-toggle" class="button button--ghost theme-toggle" aria-pressed="false" aria-label="Toggle color theme">
+                        <!-- moon / sun SVG (will swap via JS) -->
+                        <svg id="theme-icon" viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                            <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"></path>
+                        </svg>
+                    </button>
                 </div>
             </div>
             <aside class="hero__details">
-                <ul>
-                    <li><strong>Phone:</strong> <a href="tel:+971563892557">+971563892557</a></li>
-                    <li><strong>Email:</strong> <a href="mailto:niwamanyaelius95@gmail.com">niwamanyaelius95@gmail.com</a></li>
-                    <li><strong>GitHub:</strong> <a href="https://github.com/s6ft256" target="_blank" rel="noopener">github.com/s6ft256</a></li>
-                    <li><strong>Location:</strong> AbuDhabi</li>
+                <div class="hero__details-header">
+                    <img class="profile-image" src="Profile.jpeg" alt="Elius Niwamanya">
+                </div>
+                <div class="hero__details-divider" aria-hidden="true"></div>
+                <ul class="contact-list">
+                    <li>
+                        <span class="contact-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.86 19.86 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.86 19.86 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.66 12.66 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.66 12.66 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+                            </svg>
+                        </span>
+                        <a href="tel:+971563892557">+971563892557</a>
+                    </li>
+                    <li>
+                        <span class="contact-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2z" />
+                                <polyline points="22 6 12 13 2 6" />
+                            </svg>
+                        </span>
+                        <a href="mailto:niwamanyaelius95@gmail.com">niwamanyaelius95@gmail.com</a>
+                    </li>
+                    <li>
+                        <span class="contact-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58 0-.29-.01-1.05-.02-2.06-3.02.66-3.65-1.46-3.65-1.46-.55-1.39-1.34-1.76-1.34-1.76-1.1-.74.08-.73.08-.73 1.22.09 1.86 1.26 1.86 1.26 1.08 1.85 2.83 1.32 3.52 1.01.11-.79.42-1.32.76-1.62-2.41-.28-4.95-1.2-4.95-5.35 0-1.18.42-2.14 1.11-2.9-.11-.28-.48-1.4.11-2.92 0 0 .9-.29 2.95 1.1a10.2 10.2 0 0 1 5.36 0c2.05-1.39 2.95-1.1 2.95-1.1.59 1.52.22 2.64.11 2.92.69.76 1.11 1.72 1.11 2.9 0 4.16-2.54 5.06-4.96 5.33.43.36.82 1.07.82 2.16 0 1.56-.02 2.82-.02 3.21 0 .32.21.69.83.57A12 12 0 0 0 12 .5Z" />
+                            </svg>
+                        </span>
+                        <a href="https://github.com/s6ft256" target="_blank" rel="noopener">github.com/s6ft256</a>
+                    </li>
+                    <li>
+                        <span class="contact-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M21 10c0 6-9 13-9 13S3 16 3 10a9 9 0 1 1 18 0z" />
+                                <circle cx="12" cy="10" r="3" />
+                            </svg>
+                        </span>
+                        <span>AbuDhabi</span>
+                    </li>
                 </ul>
             </aside>
         </div>
@@ -40,9 +80,7 @@
             <div class="container">
                 <h2>Career Summary</h2>
                 <p>
-                    Blends software craftsmanship with Safety, Health & Environment (HSE) practice. Experienced in delivering scalable web applications,
-                    automating data pipelines, and embedding IOSH best practices into field operations. Known for reliable, security-aware execution,
-                    clear communication, and attention to detail across multidisciplinary teams.
+                    I'm a software Developer with a unique foundation in Health, Safety & Environment (HSE), bringing a dual perspective to technology. My passion lies not just in building scalable web applications and automating data pipelines, but in applying the rigorous, safety-first mindset of IOSH standards to every project. I excel in multidisciplinary teams where I can bridge the gap between technical execution and operational safety, ensuring the tools we create are not only efficient and secure but also genuinely supportive of the people who use them.
                 </p>
             </div>
         </section>
@@ -53,10 +91,8 @@
                 <div class="grid grid--skills">
                     <div class="card">
                         <h3>Technical</h3>
-                            <li>Automated Excel and Sheets exports plus ZIP bulk downloads to remove manual spreadsheet collation.</li>
                         <ul>
                             <li>Python, Django, Flask</li>
-                        <a class="card__link" href="https://github.com/s6ft256/mapper_excel" target="_blank" rel="noopener">View Project</a>
                             <li>Node.js, Redis, Celery</li>
                             <li>PostgreSQL, MongoDB, MySQL</li>
                             <li>Tailwind CSS, Vite, Webpack</li>
@@ -82,6 +118,7 @@
                         </ul>
                     </div>
                     <div class="card">
+                        <h3>Soft Skills</h3>
                         <ul>
                             <li>Problem-solving & analytical thinking</li>
                             <li>Cross-functional teamwork</li>
@@ -94,6 +131,7 @@
         </section>
 
     <section class="section section--alt" id="projects">
+            <div class="container">
                 <h2>Projects & Repositories</h2>
                 <div class="grid">
                     <article class="card">
@@ -108,6 +146,21 @@
                             <li>Applied authentication, CSRF protection, and input validation to protect compliance reporting.</li>
                         </ul>
                         <a class="card__link" href="https://github.com/s6ft256/mapper_excel" target="_blank" rel="noopener">View Project</a>
+                    </article>
+
+                    <article class="card">
+                        <header>
+                            <h3>E-Commerce & Inventory Platform</h3>
+                            <p class="card__meta">React, Next.js, Node.js, PostgreSQL, Docker, GitLab CI/CD</p>
+                        </header>
+                        <p>Full-stack e-commerce and inventory management platform integrating storefront, admin dashboards, and order processing.</p>
+                        <ul>
+                            <li>Built frontend with React.js and Next.js for fast rendering and smooth UX.</li>
+                            <li>Implemented RESTful backend services in Node.js with PostgreSQL for reliable data handling.</li>
+                            <li>Integrated Stripe payments, authentication, and admin reporting dashboards.</li>
+                            <li>Deployed via Docker and GitLab CI/CD pipelines for automated testing and delivery.</li>
+                        </ul>
+                        <span class="card__meta">2019 – Present</span>
                     </article>
 
                     <article class="card">
@@ -139,7 +192,7 @@
 
                     <article class="card">
                         <header>
-                            <h3>track</h3>
+                            <h3>SafetyHub Inspection Portal</h3>
                             <p class="card__meta">Firebase &bull; Web UI</p>
                         </header>
                         <p>HSE inspection reporting portal focused on real-time equipment tracking and training records.</p>
@@ -158,6 +211,39 @@
                 <h2>Professional Experience</h2>
                 <article class="timeline">
                     <div class="timeline__item">
+                        <h3>Software Engineer</h3>
+                        <p class="timeline__meta">TechBridge Solutions Ltd</p>
+                        <ul>
+                            <li>Designed and implemented scalable backend services using Node.js and PostgreSQL.</li>
+                            <li>Developed responsive frontend features with React.js and Next.js.</li>
+                            <li>Set up CI/CD pipelines on GitLab to ensure smooth automated deployments.</li>
+                            <li>Collaborated in Agile teams, conducting code reviews and sprint planning.</li>
+                        </ul>
+                    </div>
+                    <div class="timeline__item">
+                        <h3>Junior Frontend Developer</h3>
+                        <p class="timeline__meta">Innovatech Systems</p>
+                        <ul>
+                            <li>Built and maintained modern UI components with React.js.</li>
+                            <li>Optimized web applications for speed and performance.</li>
+                            <li>Integrated REST APIs to improve frontend-backend communication.</li>
+                            <li>Worked closely with designers to deliver pixel-perfect user experiences.</li>
+                        </ul>
+                    </div>
+                    <div class="timeline__item">
+                        <h3>Backend Developer Intern</h3>
+                        <p class="timeline__meta">CodeCraft Uganda</p>
+                        <ul>
+                            <li>Assisted in building backend APIs with Node.js and MySQL.</li>
+                            <li>Contributed to database design and query optimization.</li>
+                            <li>Wrote unit and integration tests to improve code reliability.</li>
+                            <li>Documented backend services to support team onboarding.</li>
+                        </ul>
+                    </div>
+                </article>
+                <h2>HSE Experience</h2>
+                <article class="timeline">
+                    <div class="timeline__item">
                         <h3>Lifting Supervisor</h3>
                         <p class="timeline__meta">National Project Construction &bull; Feb-Aug 2025</p>
                         <ul>
@@ -173,7 +259,7 @@
                         <ul>
                             <li>Oversaw safe equipment operations, maintenance procedures, and permit-to-work coordination.</li>
                             <li>Conducted hazard identification walkdowns and closed findings with corrective measures.</li>
-                            <li>Supported safe work planning, compliance reporting, and KPI tracking for leadership.</li>
+                            <li>Supported safe work planning, compliance reporting, and KPI tracking for site personnel.</li>
                         </ul>
                     </div>
                 </article>
@@ -192,7 +278,13 @@
                     </div>
                     <div class="card">
                         <h2>Education</h2>
-                        <p>Diploma in Computer Science, [Institution], [Graduation Year]</p>
+                        <p>Diploma in Computer Science, UICT, 2017</p>
+                    </div>
+                    <div class="card">
+                        <h2>References</h2>
+                        <p>Eng. Samuel K. Mugisha<br>
+                        Senior Software Architect, TechBridge<br>
+                        samuel.mugisha@techbridge.com</p>
                     </div>
                 </div>
             </div>
@@ -208,6 +300,46 @@
 
     <script>
         document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
+    <script>
+        // Theme toggle: remembers choice in localStorage and updates body class
+        (function() {
+            const root = document.documentElement;
+            const toggle = document.getElementById('theme-toggle');
+            const icon = document.getElementById('theme-icon');
+            if (!toggle || !icon) return;
+
+            const applyTheme = (isLight) => {
+                if (isLight) {
+                    document.body.classList.add('theme-light');
+                    toggle.setAttribute('aria-pressed', 'true');
+                    // sun icon
+                    icon.innerHTML = '<circle cx="12" cy="12" r="4"></circle><path d="M12 2v2"></path><path d="M12 20v2"></path><path d="M4.93 4.93l1.41 1.41"></path><path d="M17.66 17.66l1.41 1.41"></path><path d="M2 12h2"></path><path d="M20 12h2"></path><path d="M4.93 19.07l1.41-1.41"></path><path d="M17.66 6.34l1.41-1.41"></path>';
+                } else {
+                    document.body.classList.remove('theme-light');
+                    toggle.setAttribute('aria-pressed', 'false');
+                    // moon icon
+                    icon.innerHTML = '<path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"></path>';
+                }
+            };
+
+            // initialize from localStorage or system preference
+            const stored = localStorage.getItem('site-theme');
+            if (stored === 'light') {
+                applyTheme(true);
+            } else if (stored === 'dark') {
+                applyTheme(false);
+            } else {
+                const prefersLight = window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches;
+                applyTheme(prefersLight);
+            }
+
+            toggle.addEventListener('click', () => {
+                const isLight = document.body.classList.toggle('theme-light');
+                applyTheme(isLight);
+                localStorage.setItem('site-theme', isLight ? 'light' : 'dark');
+            });
+        })();
     </script>
 </body>
 </html>
