Feat: Add Equipment Inspector role to HSE Experience

--- a/index.html
+++ b/index.html
@@ -279,6 +279,17 @@
                             <li>Supported safe work planning, compliance reporting, and KPI tracking for site personnel.</li>
                         </ul>
                     </div>
+                    <div class="timeline__item">
+                        <h3>Equipment Inspector</h3>
+                        <p class="timeline__meta">National Project Construction &bull; Feb-Aug 2025</p>
+                        <ul>
+                            <li>Performed routine and statutory inspections on plant equipment, cranes, hoists, and lifting gear.</li>
+                            <li>Verified compliance with manufacturer specifications, industry standards, and regulatory requirements.</li>
+                            <li>Documented inspection findings, equipment defects, and maintenance recommendations in detailed reports.</li>
+                            <li>Coordinated with maintenance teams to ensure timely repairs and recertification of equipment.</li>
+                            <li>Maintained inspection schedules and equipment registers to support audit and compliance tracking.</li>
+                        </ul>
+                    </div>
                 </article>
             </div>
         </section>
