--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
                         <ul>
                             <li>Performed routine and statutory inspections on plant equipment, cranes, hoists, and lifting gear.</li>
                             <li>Verified compliance with manufacturer specifications, industry standards, and regulatory requirements.</li>
+                            <li>Implemented QR code system for instant equipment status verification, enabling real-time access to Mulkia registration and TPC (Third Party Certification) validation records.</li>
                             <li>Documented inspection findings, equipment defects, and maintenance recommendations in detailed reports.</li>
                             <li>Coordinated with maintenance teams to ensure timely repairs and recertification of equipment.</li>
                             <li>Maintained inspection schedules and equipment registers to support audit and compliance tracking.</li>
