Style: Simplify footer copyright text

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
     <footer class="footer">
         <div class="container footer__content">
-            <p>&copy; <span id="year"></span> Elius Niwamanya. References available upon request.</p>
+            <p>&copy; <span id="year"></span> Elius</p>
             <a href="#top" class="footer__link">Back to top</a>
         </div>
     </footer>
