Feat: Change Contact Me button to WhatsApp

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     Designs security-conscious tools that automate reporting, uphold compliance, and keep teams aligned on safety.
                 </p>
                 <div class="hero__cta">
-                    <a class="button" href="mailto:niwamanyaelius95@gmail.com">Contact Me</a>
+                    <a class="button" href="https://wa.me/971563892557" target="_blank" rel="noopener">Contact Me</a>
                     <a class="button button--ghost" href="#projects">View Projects</a>
                     <button id="theme-toggle" class="button button--ghost theme-toggle" aria-pressed="false" aria-label="Toggle color theme">
                         <!-- moon / sun SVG (will swap via JS) -->
