Update: Sync local changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:description" content="Full-stack engineer uniting Python, Django, and modern JavaScript frameworks with IOSH-informed HSE leadership.">
     <meta name="twitter:image" content="Profile.jpeg">
     
-    <title>Elius Niwamanya | Portfolio</title>
+    <title>elius CV</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="Logo.png">
