--- a/index.html
+++ b/index.html
@@ -310,6 +310,11 @@
                         <p>Diploma in Computer Science, UICT, 2017</p>
                     </div>
                     <div class="card">
+                        <h2>Achievements</h2>
+                        <p><a href="https://learn.microsoft.com/en-us/users/niwamanyaelius-9892/achievements?source=docs" target="_blank" rel="noopener">Microsoft Learn Profile</a></p>
+                        <p class="card__meta">View my completed learning paths, modules, and achievements on Microsoft Learn</p>
+                    </div>
+                    <div class="card">
                         <h2>References</h2>
                         <p>Eng. Samuel K. Mugisha<br>
                         Senior Software Architect, TechBridge<br>
