--- a/index.html
+++ b/index.html
@@ -311,8 +311,11 @@
                     </div>
                     <div class="card">
                         <h2>Achievements</h2>
-                        <p><a href="https://learn.microsoft.com/en-us/users/niwamanyaelius-9892/achievements?source=docs" target="_blank" rel="noopener">Microsoft Learn Profile</a></p>
-                        <p class="card__meta">View my completed learning paths, modules, and achievements on Microsoft Learn</p>
+                        <ul>
+                            <li><a href="https://learn.microsoft.com/api/achievements/share/en-us/NiwamanyaElius-9892/XQXTMW9Y?sharingId=FD77BB2C6479EE9B" target="_blank" rel="noopener">Microsoft Learn Achievement</a></li>
+                            <li><a href="https://learn.microsoft.com/en-us/users/niwamanyaelius-9892/achievements?source=docs" target="_blank" rel="noopener">View All Achievements</a></li>
+                        </ul>
+                        <p class="card__meta">Completed learning paths and modules on Microsoft Learn</p>
                     </div>
                     <div class="card">
                         <h2>References</h2>
