Feat: Display Microsoft Learn achievement badge

--- a/index.html
+++ b/index.html
@@ -311,8 +311,12 @@
                     </div>
                     <div class="card">
                         <h2>Achievements</h2>
+                        <div style="margin: 1rem 0;">
+                            <a href="https://learn.microsoft.com/api/achievements/share/en-us/NiwamanyaElius-9892/XQXTMW9Y?sharingId=FD77BB2C6479EE9B" target="_blank" rel="noopener">
+                                <img src="https://learn.microsoft.com/api/achievements/share/en-us/NiwamanyaElius-9892/XQXTMW9Y?sharingId=FD77BB2C6479EE9B" alt="Microsoft Learn Achievement Badge" style="max-width: 100%; height: auto; border-radius: 8px;">
+                            </a>
+                        </div>
                         <ul>
-                            <li><a href="https://learn.microsoft.com/api/achievements/share/en-us/NiwamanyaElius-9892/XQXTMW9Y?sharingId=FD77BB2C6479EE9B" target="_blank" rel="noopener">Microsoft Learn Achievement</a></li>
                             <li><a href="https://learn.microsoft.com/en-us/users/niwamanyaelius-9892/achievements?source=docs" target="_blank" rel="noopener">View All Achievements</a></li>
                         </ul>
                         <p class="card__meta">Completed learning paths and modules on Microsoft Learn</p>
