--- a/index.html
+++ b/index.html
@@ -311,18 +311,8 @@
                     </div>
                     <div class="card">
                         <h2>Achievements</h2>
-                        <div style="margin: 1rem 0; display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center;">
-                            <a href="https://learn.microsoft.com/api/achievements/share/en-us/NiwamanyaElius-9892/XQXTMW9Y?sharingId=FD77BB2C6479EE9B" target="_blank" rel="noopener">
-                                <img src="https://learn.microsoft.com/api/achievements/share/en-us/NiwamanyaElius-9892/XQXTMW9Y?sharingId=FD77BB2C6479EE9B" alt="Microsoft Learn Achievement Badge" style="max-width: 180px; height: auto; border-radius: 8px;">
-                            </a>
-                            <a href="https://learn.microsoft.com/api/achievements/share/en-us/NiwamanyaElius-9892/FMFKSUQX?sharingId=FD77BB2C6479EE9B" target="_blank" rel="noopener">
-                                <img src="https://learn.microsoft.com/api/achievements/share/en-us/NiwamanyaElius-9892/FMFKSUQX?sharingId=FD77BB2C6479EE9B" alt="Microsoft Learn Achievement Badge" style="max-width: 180px; height: auto; border-radius: 8px;">
-                            </a>
-                        </div>
-                        <ul>
-                            <li><a href="https://learn.microsoft.com/en-us/users/niwamanyaelius-9892/achievements?source=docs" target="_blank" rel="noopener">View All Achievements</a></li>
-                        </ul>
-                        <p class="card__meta">Completed learning paths and modules on Microsoft Learn</p>
+                        <p>Microsoft Learn achievements and badges.</p>
+                        <a class="card__link" href="https://learn.microsoft.com/en-us/users/niwamanyaelius-9892/achievements?source=docs" target="_blank" rel="noopener">View Achievements</a>
                     </div>
                     <div class="card">
                         <h2>References</h2>
