Feat: Add Achievements card linking to Microsoft Learn profile

--- a/index.html
+++ b/index.html
@@ -306,13 +306,13 @@
                         </ul>
                     </div>
                     <div class="card">
-                        <h2>Education</h2>
-                        <p>Diploma in Computer Science, UICT, 2017</p>
+                        <h2>Achievements</h2>
+                        <p>Microsoft Learn achievements &certificates</p>
+                        <a class="card__link" href="https://learn.microsoft.com/en-us/users/niwamanyaelius-9892/achievements?source=docs" target="_blank" rel="noopener">View Achievements</a>
                     </div>
                     <div class="card">
-                        <h2>Achievements</h2>
-                        <p>Microsoft Learn achievements and badges.</p>
-                        <a class="card__link" href="https://learn.microsoft.com/en-us/users/niwamanyaelius-9892/achievements?source=docs" target="_blank" rel="noopener">View Achievements</a>
+                        <h2>Education</h2>
+                        <p>Diploma in Computer Science, UICT, 2017</p>
                     </div>
                     <div class="card">
                         <h2>References</h2>
