Refactor certificates: separate section, add badges, add LinkedIn, make location link, remove section underline

--- a/index.html
+++ b/index.html
@@ -80,12 +80,22 @@
                     </li>
                     <li>
                         <span class="contact-icon" aria-hidden="true">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-4 0v7h-4v-14h4v2.5a4 4 0 0 1 4-2.5z" fill="currentColor"></path>
+                                <rect x="2" y="9" width="4" height="11" rx="1" fill="currentColor"></rect>
+                                <circle cx="4" cy="4" r="2" fill="currentColor"></circle>
+                            </svg>
+                        </span>
+                        <a href="https://www.linkedin.com/in/elius-niwamanya-026228187" target="_blank" rel="noopener">linkedin.com/in/elius-niwamanya-026228187</a>
+                    </li>
+                    <li>
+                        <span class="contact-icon" aria-hidden="true">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M21 10c0 6-9 13-9 13S3 16 3 10a9 9 0 1 1 18 0z" />
                                 <circle cx="12" cy="10" r="3" />
                             </svg>
                         </span>
-                        <span>AbuDhabi</span>
+                        <a href="https://maps.app.goo.gl/f7Ya7cnoPpk7tUjDA" target="_blank" rel="noopener">AbuDhabi</a>
                     </li>
                 </ul>
             </aside>
@@ -295,19 +305,63 @@
             </div>
         </section>
 
+        <section class="section" id="certificates">
+            <div class="container">
+                <h2>Certifications</h2>
+                <div class="grid">
+
+                    <div class="card cert-card">
+                        <h2>AI & Data</h2>
+                        <img class="cert-badge" src="cert.jpg" alt="Certificate icon" aria-hidden="true">
+                        <ul>
+                            <li>AI for Beginners <a class="cert-link" href="AI for Beginners.pdf">View</a></li>
+                            <li>AI for Business Professionals <a class="cert-link" href="AI for Business Professionals.pdf">View</a></li>
+                            <li>Presenting Data <a class="cert-link" href="Presenting Data.pdf">View</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="card cert-card">
+                        <h2>IT & Cybersecurity</h2>
+                        <img class="cert-badge" src="cert.jpg" alt="Certificate icon" aria-hidden="true">
+                        <ul>
+                            <li>Introduction to Cybersecurity Awareness <a class="cert-link" href="Introduction to Cybersecurity Awareness.pdf">View</a></li>
+                            <li>IT for Business Success <a class="cert-link" href="IT for Business Success.pdf">View</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="card cert-card">
+                        <h2>HSE & Safety</h2>
+                        <img class="cert-badge" src="cert.jpg" alt="Certificate icon" aria-hidden="true">
+                        <ul>
+                            <li>IOSH — Safety, Health & Environment (HSE) <a class="cert-link" href="iosh.pdf">View</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="card cert-card">
+                        <h2>Business & Operations</h2>
+                        <img class="cert-badge" src="cert.jpg" alt="Certificate icon" aria-hidden="true">
+                        <ul>
+                            <li>Business Email <a class="cert-link" href="Business Email.pdf">View</a></li>
+                            <li>Customer Experience (CX) for Business Success <a class="cert-link" href="Customer Experience (CX) for Business Success.pdf">View</a></li>
+                            <!-- Inventory Management and Assist Plus certificates intentionally hidden -->
+                        </ul>
+                    </div>
+
+                    <div class="card cert-card">
+                        <h2>Professional Development</h2>
+                        <img class="cert-badge" src="cert.jpg" alt="Certificate icon" aria-hidden="true">
+                        <ul>
+                            <li>Professional Networking for Career Growth <a class="cert-link" href="Professional Networking for Career Growth.pdf">View</a></li>
+                            <li>Grasshopper — Coding Fundamentals <a class="cert-link" href="gh.jpg">View</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="section section--alt" id="credentials">
             <div class="container">
                 <div class="grid">
-                    <div class="card">
-                        <h2>Certifications</h2>
-                        <ul>
-                            <li>IOSH — Safety, Health & Environment (HSE) <a class="cert-link" href="iosh.pdf">View Certificate</a></li>
-                            <li>Grasshopper — Coding Fundamentals <a href="gh.jpg" target="_blank" rel="noopener">View Certificate</a></li>
-                            <li>Introduction to Cybersecurity Awareness <a class="cert-link" href="Introduction to Cybersecurity Awareness.pdf">View Certificate</a></li>
-                            <li>Professional Networking for Career Growth <a class="cert-link" href="Professional Networking for Career Growth.pdf">View Certificate</a></li>
-                            <li>Business Email <a class="cert-link" href="Business Email.pdf">View Certificate</a></li>
-                        </ul>
-                    </div>
                     <div class="card">
                         <h2>Achievements</h2>
                         <p>Microsoft Learn achievements &certificates</p>
