--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     
     <title>elius CV</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Google Fonts: Inter for UI, Merriweather for headings -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Google Fonts: Inter for UI, Merriweather/Playfair/Roboto Slab for headings -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Merriweather:wght@400;700&family=Playfair+Display:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="Logo.png">
     <link rel="apple-touch-icon" href="Logo.png">
