--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:description" content="Full-stack engineer uniting Python, Django, and modern JavaScript frameworks with IOSH-informed HSE leadership.">
     <meta name="twitter:image" content="Profile.jpeg">
     
-    <title>elius CV</title>
+    <title>personal profile</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Google Fonts: Inter for UI, Merriweather/Playfair/Roboto Slab for headings -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Merriweather:wght@400;700&family=Playfair+Display:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
