--- a/index.html
+++ b/index.html
@@ -547,34 +547,69 @@
 </html>
 
 <script>
-// Cursor ring: append element and track mouse with smooth animation
+// Cursor ring with trailing dots
 (function() {
     const ring = document.createElement('div');
     ring.className = 'cursor-ring';
     ring.innerHTML = '<div class="ring-outline"></div><div class="ring-inner"></div><div class="cursor-pear" aria-hidden="true"></div>';
     document.body.appendChild(ring);
 
+    // create trail elements
+    const TRAIL_COUNT = 6;
+    const trails = [];
+    for (let i = 0; i < TRAIL_COUNT; i++) {
+        const t = document.createElement('div');
+        t.className = 'cursor-trail' + (i > 2 ? ' small' : '');
+        t.style.opacity = String(1 - i * 0.13);
+        document.body.appendChild(t);
+        trails.push(t);
+    }
+
     let mouseX = window.innerWidth / 2;
     let mouseY = window.innerHeight / 2;
     let ringX = mouseX;
     let ringY = mouseY;
 
-    const speed = 0.18; // lower = smoother lag
+    // trail positions
+    const trailX = new Array(TRAIL_COUNT).fill(mouseX);
+    const trailY = new Array(TRAIL_COUNT).fill(mouseY);
+
+    const speed = 0.18; // ring follow speed
 
     window.addEventListener('mousemove', (e) => {
         mouseX = e.clientX;
         mouseY = e.clientY;
-        // ensure ring is visible
         ring.style.opacity = '1';
+        trails.forEach(t => t.style.opacity = t.style.opacity || '0.6');
     });
 
-    // hide when leaving window
-    window.addEventListener('mouseleave', () => { ring.style.opacity = '0'; });
+    window.addEventListener('mouseleave', () => {
+        ring.style.opacity = '0';
+        trails.forEach((t,i) => t.style.opacity = String(0));
+    });
 
     function raf() {
+        // move main ring
         ringX += (mouseX - ringX) * speed;
         ringY += (mouseY - ringY) * speed;
-        ring.style.transform = `translate3d(${ringX - 0}px, ${ringY - 0}px, 0) translate(-50%, -50%)`;
+        ring.style.transform = `translate3d(${ringX}px, ${ringY}px, 0) translate(-50%, -50%)`;
+
+        // update trails: each one chases the previous (or the ring for first)
+        for (let i = 0; i < TRAIL_COUNT; i++) {
+            const targetX = i === 0 ? ringX : trailX[i-1];
+            const targetY = i === 0 ? ringY : trailY[i-1];
+            const followSpeed = 0.12 - (i * 0.01); // slower for later trails
+            trailX[i] += (targetX - trailX[i]) * Math.max(0.02, followSpeed);
+            trailY[i] += (targetY - trailY[i]) * Math.max(0.02, followSpeed);
+            const t = trails[i];
+            t.style.transform = `translate3d(${trailX[i]}px, ${trailY[i]}px, 0) translate(-50%, -50%)`;
+            // subtle scale based on index
+            const scale = 1 - i * 0.08;
+            t.style.width = (20 * Math.max(0.45, scale)) + 'px';
+            t.style.height = (20 * Math.max(0.45, scale)) + 'px';
+            t.style.opacity = String(1 - i * 0.13);
+        }
+
         requestAnimationFrame(raf);
     }
     requestAnimationFrame(raf);
