--- a/index.html
+++ b/index.html
@@ -630,3 +630,49 @@
     });
 })();
 </script>
+
+<script>
+// Smooth transitional background color on mouse wheel and scroll
+(function() {
+    const root = document.documentElement;
+    // start hue near current blue/navy values (~215)
+    let hue = 210;
+    let targetHue = hue;
+    let ticking = false;
+
+    function applyHue(h) {
+        // generate two related background colors
+        const bg = `hsl(${h} 40% 6%)`;
+        const bgAlt = `hsl(${(h + 6) % 360} 38% 8%)`;
+        root.style.setProperty('--bg', bg);
+        root.style.setProperty('--bg-alt', bgAlt);
+    }
+
+    applyHue(hue);
+
+    // wheel adjusts hue incrementally for a reactive feel
+    window.addEventListener('wheel', (e) => {
+        targetHue = (targetHue + e.deltaY * 0.02) % 360;
+        if (targetHue < 0) targetHue += 360;
+        if (!ticking) {
+            requestAnimationFrame(() => {
+                // ease toward targetHue
+                hue += (targetHue - hue) * 0.2;
+                applyHue(hue);
+                ticking = false;
+            });
+            ticking = true;
+        }
+    }, { passive: true });
+
+    // map vertical scroll position to hue as an alternative
+    window.addEventListener('scroll', () => {
+        const y = window.scrollY || window.pageYOffset;
+        const docHeight = Math.max(document.documentElement.scrollHeight - window.innerHeight, 1);
+        const pct = y / docHeight;
+        // map 0..1 to a +/- 40 hue shift around starting hue
+        targetHue = (210 + (pct - 0.5) * 80) % 360;
+        applyHue(targetHue);
+    }, { passive: true });
+})();
+</script>
