Feat: scaffold Vite + React + Tailwind; add live floating React widget

--- a/index.html
+++ b/index.html
@@ -545,8 +545,11 @@
     </script>
 </body>
 </html>
+    <!-- Vite React entry: mounts React app and loads Tailwind-built CSS -->
+    <script type="module" src="/src/main.jsx"></script>
 
-<script>
+</html>
+
 // Cursor ring with trailing dots
 (function() {
     const ring = document.createElement('div');
