Fix: cursor script tag and script ordering; ensure cursor trailing script runs

--- a/index.html
+++ b/index.html
@@ -543,13 +543,7 @@
             });
         })();
     </script>
-</body>
-</html>
-    <!-- Vite React entry: mounts React app and loads Tailwind-built CSS -->
-    <script type="module" src="/src/main.jsx"></script>
-
-</html>
-
+<script>
 // Cursor ring with trailing dots
 (function() {
     const ring = document.createElement('div');
@@ -708,3 +702,9 @@
     requestAnimationFrame(rafLoop);
 })();
 </script>
+
+    <!-- Vite React entry: mounts React app and loads Tailwind-built CSS -->
+    <script type="module" src="/src/main.jsx"></script>
+
+</body>
+</html>
