--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
 </script>
 
     <!-- Vite React entry: mounts React app and loads Tailwind-built CSS -->
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
 
 </body>
 </html>
