--- a/src/index.html
+++ b/src/index.html
@@ -53,16 +53,16 @@
       @keyframes flagWave {
         0%,
         100% {
-          transform: rotate(-5deg) scale(1);
+          transform: rotate(-5deg) scale(1) translateZ(0);
         }
         25% {
-          transform: rotate(5deg) scale(1.1);
+          transform: rotate(5deg) scale(1.1) translateZ(0);
         }
         50% {
-          transform: rotate(-3deg) scale(1.05);
+          transform: rotate(-3deg) scale(1.05) translateZ(0);
         }
         75% {
-          transform: rotate(3deg) scale(1.1);
+          transform: rotate(3deg) scale(1.1) translateZ(0);
         }
       }
       @media (prefers-reduced-motion: reduce) {
