--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         "jobTitle": "Full-Stack Developer & IOSH-Certified HSE Personnel",
         "url": "https://elius.pro",
         "sameAs": ["https://github.com/s6ft256", "https://linkedin.com/in/elius-niwamanya"],
-        "email": "contact@elius.pro",
+        "email": "niwamanyaelius95@gmail.com",
         "telephone": "+971563892557"
       }
     </script>
